--- a/rooasible.yml
+++ b/rooasible.yml
@@ -1,4 +1,5 @@
-- name: Roboshop project setup
+- name: RoboShop Project Setup
   hosts: all
   become: true
-  roles: frontend
+  roles:
+    - "{{ app_name }}"
