--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: Install nginx 1.24 version
   ansible.builtin.dnf:
     name: nginx:1.24
-    state: Installed
+    state: installed
 
 - name: Copy ngnix.conf
   ansible.builtin.copy:
