--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -7,7 +7,7 @@
 
 - name: Install nginx 1.24 version
   ansible.builtin.dnf:
-    name: nginx:1.24
+    name: nginx
     state: installed
 
 - name: Copy ngnix.conf
