--- a/roles/common/tasks/app-prereq.yml
+++ b/roles/common/tasks/app-prereq.yml
@@ -16,6 +16,6 @@
 
 - name: download and extract
   ansible.builtin.unarchive:
-    src: https://roboshop-artifacts.s3.amazonaws.com/{{ component_name }}-v3.zip
+    src: https://roboshop-artifacts.s3.amazonaws.com/{{ app_name }}-v3.zip
     dest: /app
     remote_src: yes
