--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -1,18 +1,12 @@
-#cp $dir_path/$app_name.service /etc/systemd/system/$app_name.service
-#systemctl daemon-reload
-#systemctl enable $app_name
-#systemctl restart $app_name
-
-
 
 - name: Setup SystemD service file
   ansible.builtin.template:
-    src: "{{ component_name }}.service"
+    src: "{{ app_name }}.service"
     dest: /etc/systemd/system/{{ component_name }}.service
 
 - name: Start Application
   ansible.builtin.systemd_service:
-    name: "{{ component_name }}"
+    name: "{{ app_name }}"
     state: restarted
     enabled: true
     daemon_reload: true
