--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -2,8 +2,8 @@
 
 - name: include role nodejs
   ansible.builtin.include_role:
-    name: nodejs
-    tasks_from: common
+    name: common
+    tasks_from: nodejs.yml
 
 - name: copy mongo.repo
   ansible.builtin.copy:
