--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -2,7 +2,7 @@
 - name: Setup SystemD service file
   ansible.builtin.template:
     src: "{{ app_name }}.service"
-    dest: /etc/systemd/system/"{{ app_name }}.service"
+    dest: /etc/systemd/system/{{ app_name }}.service
 
 - name: Start Application
   ansible.builtin.systemd_service:
