--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -1,8 +1,8 @@
 
 - name: Setup SystemD service file
   ansible.builtin.template:
-    src: catalogue.service"
-    dest: /etc/systemd/system/catalogue.service
+    src: "{{ app_name }}.service"
+    dest: /etc/systemd/system/{{ app_name }}.service
 
 - name: Start Application
   ansible.builtin.systemd_service:
