--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -1,6 +1,6 @@
 
 - name: Setup SystemD service file
-  ansible.builtin.template:
+  ansible.builtin.copy:
     src: "{{ app_name }}.service"
     dest: /etc/systemd/system/{{ app_name }}.service
 
