--- a/roles/cart/tasks/main.yml
+++ b/roles/cart/tasks/main.yml
@@ -1,5 +1,5 @@
 
 - name: include nodejs role
-  ansible.builtin.role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: nodejs.yml
